fixed wallet size on small mobile

--- a/src/components/Home/Supported.module.css
+++ b/src/components/Home/Supported.module.css
@@ -18,7 +18,6 @@
     color: var(--theme-dimLight);
 }
 .wallet-link {
-    font-weight: 600;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,7 +29,7 @@
     text-align: center;
     background: var(--theme-dark);
     border-radius: 10px;
-    color: var(--theme-dimLight);
+    color: var(--theme-light);
     font-size: 13px;
 }
 .wallet-link:hover .wallet-logo {
@@ -58,15 +57,21 @@
 }
 @media screen and (max-width: 600px) {
     .wallet-logo  {
-        width: 50px;
-        height: 50px;
+        width: 47px;
+        height: 47px;
     }
     .wallet-link {
-        width: 115px;
-        height: 115px
+        width: 112px;
+        height: 112px
     }   
-    .walletInfo > p {
-        font-weight: 500;
-        font-size: 13px;
+    .wallet-support {
+        padding: 70px 10px;
     }
+    .wallet-container {
+        gap: 8px;
+    }
+
+    
+    
+ 
 }
