--- a/src/components/SelectWallet/SelectWalletContainer.module.css
+++ b/src/components/SelectWallet/SelectWalletContainer.module.css
@@ -35,7 +35,6 @@
 .walletContainer {
     cursor: pointer;
     border-radius: 10px;
-    padding: 10px;
     background: var(--theme-dark);
     display: flex;
     flex-direction: column-reverse;
@@ -45,7 +44,7 @@
     gap: 10px;
     width: 140px;
     height: 140px;
-    color: var(--theme-lightblue);
+    color: var(--theme-light);
     transition: .3s ease-in-out;
 }
 .walletContainer:hover {
@@ -62,18 +61,22 @@
     align-items: center;
 }
 @media screen and (max-width: 600px) {
+    .container {
+        min-height: 100vh;
+        padding:0px;
+    }
     .innerContainer {
         padding: 0 10px;
         justify-content: center;
         gap: 10px;
     }
     .walletImage {
-        width: 50px;
-        height: 50px;
+        width: 47px;
+        height: 47px;
     }
     .walletContainer {
-        width: 115px;
-        height: 115px
+        width: 112px;
+        height: 112px
     }   
     .walletInfo > p {
         font-weight: 500;
